# UrbanLens

./: .dockerignore  .env.example  .gitattributes  .gitignore  .npmrc  AGENTS.md  Cargo.toml  README.md  compose.yaml  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
.planning/: STATE.md
.planning/phases/00-product-and-data-discovery/: PHASE-PLAN.md  PHASE-STATUS.md  PHASE-UAT.md
.planning/phases/01-local-platform-foundation/: PHASE-PLAN.md  PHASE-STATUS.md  PHASE-UAT.md
.planning/phases/02-ingestion-and-canonical-data-pipeline/: PHASE-PLAN.md  PHASE-STATUS.md  PHASE-UAT.md
.planning/phases/03-spatial-data-model-and-query-engine/: PHASE-PLAN.md  PHASE-STATUS.md  PHASE-UAT.md
.planning/phases/XX-template/: PHASE-PLAN.md  PHASE-STATUS.md  PHASE-UAT.md
apps/api/: Cargo.toml
apps/api/migrations/: 202606250002_create_lineage_foundation.sql  202606290001_create_transaction_observation_schema.sql  202606290002_add_lineage_upsert_keys.sql  202607020001_add_area_boundaries_spatial_indexes.sql  202607020002_allow_aggregate_boundary_import_lineage.sql
apps/api/src/: lib.rs  main.rs
apps/web/: next.config.ts  package.json  vitest.config.ts
apps/web/src/app/: app-shell.tsx  globals.css  layout.tsx  not-found.test.tsx  not-found.tsx  page.test.tsx  page.tsx  providers.tsx
apps/web/src/app/market-map/: error.test.tsx  error.tsx  (+3 more)
apps/web/src/components/: connectivity-panel.test.tsx  connectivity-panel.tsx
apps/web/src/lib/: connectivity.ts
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
docs/: architecture.md  data-model.md  data-sources.md  importer.md  local-development.md  product-brief.md
docs/adr/: 001-use-postgis-for-spatial-queries.md  002-use-graphql-for-product-api.md  003-preserve-raw-source-payloads.md  004-model-location-precision-explicitly.md  005-use-rust-actix-web-for-api.md
infra/: api.Dockerfile  docker-compose.yml  web.Dockerfile
scripts/: check-all.sh  check-rust-docker.sh  check-rust.sh  check-web.sh  import-boundaries.sh  import-fixture.sh  smoke-compose.sh  smoke-mlit-api.sh  validate-boundary-fixture.sh
workers/importer/: Cargo.toml
workers/importer/fixtures/boundaries/: README.md  SHA256SUMS  mlit-n03-tokyo-23-wards-2023.geojson
workers/importer/fixtures/transactions/: README.md  SHA256SUMS  mlit-reinfolib-chuo-2024-q4.csv  mlit-reinfolib-shibuya-2024-q4.csv  mlit-reinfolib-shinagawa-2024-q4.csv
workers/importer/src/: boundaries.rs  lib.rs  main.rs  mlit.rs  persistence.rs
