[package]
name = "urbanlens-api"
description = "UrbanLens HTTP and GraphQL API"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[[bin]]
name = "urbanlens-migrate"
path = "src/bin/migrate.rs"

[dependencies]
sqlx = { version = "0.8.6", default-features = false, features = ["macros", "migrate", "postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
