[package]
name = "urbanlens-api"
description = "UrbanLens HTTP and GraphQL API"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[[bin]]
name = "urbanlens-migrate"
path = "src/bin/migrate.rs"

[[bin]]
name = "urbanlens-healthcheck"
path = "src/bin/healthcheck.rs"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.11.0"
async-graphql = "7.0.17"
async-graphql-actix-web = "7.0.17"
env_logger = "0.11.8"
futures-util = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", default-features = false, features = ["macros", "migrate", "postgres", "runtime-tokio-rustls", "uuid"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.18.1", features = ["v4"] }

[lints]
workspace = true
